# Bili-Mushroom

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.original.md  CLAUDE.md  REVIEW.md  ROADMAP.md  build-windows.bat  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.claude/: settings.json
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  STATE.original.md  config.json
scripts/: bump-version.cjs  bump-version.js  dev-fake-updater.js  dev-real-updater.js  release.js  (+1 more)
src/: App.test.tsx  (+3 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_finds.sql  0003_find_photos.sql  0004_location_note.sql  0005_species_notes.sql  0006_tile_cache.sql  0007_find_favorites.sql  0008_observed_count.sql  0009_species_profiles.sql  0010_species_profile_tags.sql  0011_zones.sql  0012_observed_count_range.sql  0013_species_profile_edibility.sql  0014_find_edibility_note.sql  0015_species_profile_edibility_note.sql  0016_species_profile_threat_distribution.sql  0017_repair_finds_edibility_note.sql  0018_species_profile_synonyms.sql  0019_species_profile_fruiting_body_override.sql  0020_species_profile_description.sql  0021_species_recipes.sql  0022_species_profile_common_name.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: exif.rs  finds.rs  import.rs  mod.rs  path_builder.rs  stats.rs  storage.rs  tile_cache_db.rs  tile_proxy.rs  updater.rs  zones.rs
(+441 files in other folders)
