[package]
name = "bili-mushroom"
version = "0.1.0"
edition = "2021"

[lib]
name = "bili_mushroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
libsqlite3-sys = { version = ">=0.17.2", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-fs = "2"

[dev-dependencies]
tempfile = "3"
